--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  csv: ^5.0.0
+
   google_maps_flutter: ^2.5.0
   # Optional: for location permissions
   permission_handler: ^11.0.1
@@ -68,6 +71,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - lib/rainwater_backend/gwl.csv
+    - lib/rainwater_backend/pincodes_of_india.csv
+    - lib/rainwater_backend/predictions_2025.csv
+    - lib/rainwater_backend/soil_texture.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
